fix footer spacing

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -85,7 +85,28 @@ main{
   }
 
 }
-
+footer{
+  width: 100%;    
+  padding:1em;
+  h3{
+    text-align: center;
+    margin:1em;
+  }
+  div{
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    table{  
+      width:50%;
+      >tr{
+        td{
+          text-align: center ;
+        }
+      }
+    }
+  }
+}
 
 @media screen and (max-width:720px){
   header.main{
@@ -120,29 +141,4 @@ main{
   }
 }
 
-footer{
-  width: 100%;    
-  margin:3em;
-  h3{
-    text-align: center;
-    margin:3em;
-  }
-  div{
-    width:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    table{  
-      width:50%;
-      >tr{
-        td{
-          text-align: center ;
-        }
-      }
-    }
-  }
-}
 
-@container header-main{
-
-}
